--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "i18next": "^23.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.0",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "store": "^2.0.12",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -45,5 +47,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/store": "^2.0.5",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.77.8"
   }
 }
