--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "homepage": "https://dongesssss.github.io/",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.5",
+    "@mui/material": "^5.16.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,11 +17,14 @@
     "@types/react-dom": "^18.3.0",
     "gh-pages": "^6.1.1",
     "i18next": "^23.12.2",
+    "pretendard": "^1.3.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.0.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.77.8",
     "store": "^2.0.12",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -51,6 +58,7 @@
   "devDependencies": {
     "@types/store": "^2.0.5",
     "resolve-url-loader": "^5.0.0",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "sass-loader": "^16.0.0"
   }
 }
